fix: Spacing issues with thumbnail for product with carousel (GH-4361)

--- a/projects/storefrontstyles/scss/components/product/details/_product-images.scss
+++ b/projects/storefrontstyles/scss/components/product/details/_product-images.scss
@@ -20,6 +20,8 @@ $productThumbSize: 75px !default;
   cx-media {
     outline: none;
 
+    text-align: center;
+
     &.is-missing {
       min-height: 30vh;
     }
